# algorythm

./: .gitignore  CLAUDE.md
.github/workflows/: main.yml
8Puzzle/: EightPuzzle_astar.py  astar_animation.py
RAG-FAISS/: embeddings.py  llm.py  main.py  pyproject.toml  rag.py  search.py
docs/: Gemfile
docs/docs/: RAG-FAISS.md
